--- a/index.html
+++ b/index.html
@@ -11,22 +11,17 @@
       padding: 20px;
     }
 
-    h1 {
-      text-align: center;
-      margin-bottom: 20px;
-      color: #333;
-    }
-
-    .tree-container {
+    .tree {
       display: flex;
       justify-content: flex-start;
+      align-items: flex-start;
       overflow-x: auto;
       padding: 20px;
     }
 
     ul {
       display: flex;
-      list-style: none;
+      list-style-type: none;
       padding-left: 20px;
       position: relative;
     }
@@ -37,26 +32,17 @@
       position: relative;
     }
 
-    li div.member {
+    li div {
       display: inline-block;
-      padding: 10px;
-      border-radius: 10px;
-      border: 2px solid #333;
+      padding: 10px 20px;
       background: #4CAF50;
       color: #fff;
       font-weight: bold;
-      width: 120px;
+      border-radius: 8px;
+      border: 2px solid #333;
     }
 
-    li div.member img {
-      width: 80px;
-      height: 80px;
-      border-radius: 50%;
-      margin-bottom: 5px;
-      border: 2px solid #fff;
-    }
-
-    /* Horizontal connector */
+    /* Horizontal connectors */
     li::before {
       content: '';
       position: absolute;
@@ -85,29 +71,27 @@
 </head>
 <body>
 
-  <h1>Mdridha Family Tree</h1>
-  <div class="tree-container" id="familyTree"></div>
+  <h1 style="text-align:center; margin-bottom:20px;">Mdridha Family Tree</h1>
+
+  <div class="tree" id="familyTree"></div>
 
   <script>
-    // Family data – add your names and optional photos here
+    // Mdridha family data
     const familyData = {
       "name": "Grandfather Mdridha",
-      "photo": "https://via.placeholder.com/80",
       "children": [
         {
           "name": "Father Mdridha",
-          "photo": "https://via.placeholder.com/80",
           "children": [
-            {"name": "Child1 Mdridha", "photo": "https://via.placeholder.com/80"},
-            {"name": "Child2 Mdridha", "photo": "https://via.placeholder.com/80"}
+            {"name": "Child1 Mdridha"},
+            {"name": "Child2 Mdridha"}
           ]
         },
         {
           "name": "Uncle Mdridha",
-          "photo": "https://via.placeholder.com/80",
           "children": [
-            {"name": "Cousin1 Mdridha", "photo": "https://via.placeholder.com/80"},
-            {"name": "Cousin2 Mdridha", "photo": "https://via.placeholder.com/80"}
+            {"name": "Cousin1 Mdridha"},
+            {"name": "Cousin2 Mdridha"}
           ]
         }
       ]
@@ -117,12 +101,7 @@
 
     function createTree(member) {
       const li = document.createElement('li');
-      li.innerHTML = `
-        <div class="member">
-          ${member.photo ? `<img src="${member.photo}" alt="${member.name}">` : ''}
-          <div>${member.name}</div>
-        </div>
-      `;
+      li.innerHTML = `<div>${member.name}</div>`;
 
       if (member.children && member.children.length > 0) {
         const ul = document.createElement('ul');
@@ -131,6 +110,7 @@
         });
         li.appendChild(ul);
       }
+
       return li;
     }
 
