--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@ body {
   padding: 20px;
 }
 
+h1 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
 .tree {
   display: flex;
   justify-content: center;
@@ -75,11 +80,12 @@ ul ul::before {
 </head>
 <body>
 
-<h1 style="text-align:center;">Mdridha Family Tree</h1>
+<h1>Mdridha Family Tree</h1>
 
 <div class="tree" id="familyTree"></div>
 
 <script>
+// Edit names directly here
 const familyData = {
   "name": "Grandfather Mdridha",
   "children": [
