--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ const familyData = {
       "name": "Uncle Mdridha",
       "children": [
         {"name": "Cousin1 Mdridha"},
-        {"name": "Cousin2 Mdridha"}
+        {"name": "siam Mdridha"}
       ]
     }
   ]
@@ -129,3 +129,4 @@ treeContainer.appendChild(ulRoot);
 
 </body>
 </html>
+
