--- a/index.html
+++ b/index.html
@@ -87,20 +87,20 @@ ul ul::before {
 <script>
 // Edit names directly here
 const familyData = {
-  "name": "Grandfather Mdridha",
+  "name": "Babar Ali Haolader",
   "children": [
     {
-      "name": "Father Mdridha",
+      "name": "Akkel Ali Mdridha",
       "children": [
         {"name": "Child1 Mdridha"},
         {"name": "Child2 Mdridha"}
       ]
     },
     {
-      "name": "Uncle Mdridha",
+      "name": "Akram Ali Mridha",
       "children": [
-        {"name": "Cousin1 Mdridha"},
-        {"name": "siam Mdridha"}
+        {"name": "Mobarak Ali"},
+        {"name": "Gohur ALi"}
       ]
     }
   ]
@@ -129,5 +129,6 @@ treeContainer.appendChild(ulRoot);
 
 </body>
 </html>
+
 
 
