--- a/index.html
+++ b/index.html
@@ -92,7 +92,11 @@ const familyData = {
     {
       "name": "Akkel Ali Mdridha",
       "children": [
-        {"name": "Child1 Mdridha"},
+        {"name": "Abser Kerani"}, 
+                     "children": [
+                    {"name": "Manik Mridha"},
+                    {"name": "Lotif Mridha"}
+                    ]
          {"name": "Child1 Mdridha"},
          {"name": "Child1 Mdridha"},
          {"name": "Child1 Mdridha"},
@@ -134,6 +138,7 @@ treeContainer.appendChild(ulRoot);
 
 </body>
 </html>
+
 
 
 
