--- a/index.html
+++ b/index.html
@@ -92,11 +92,12 @@ const familyData = {
     {
       "name": "Akkel Ali Mdridha",
       "children": [
-        {"name": "Abser Kerani"}, 
-                  "children": [
-                    {"name": "manik"},
-                    {"name": "lotif"}
-                     ]
+        {"name": "Abser Kerani"
+        "children": [
+        {"name": "Manik"},
+        {"name": "Lotif"}
+      ]
+        }, 
         {"name": "Child1 Mdridha"},
         {"name": "Child1 Mdridha"},
         {"name": "Child2 Mdridha"}
