--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ const familyData = {
     {
       "name": "Akkel Ali Mdridha",
       "children": [
-        {"name": "Abser Kerani"
+        {"name": "Abser Kerani",
         "children": [
         {"name": "Manik"},
         {"name": "Lotif"}
@@ -136,6 +136,7 @@ treeContainer.appendChild(ulRoot);
 
 </body>
 </html>
+
 
 
 
