--- a/index.html
+++ b/index.html
@@ -85,19 +85,20 @@ ul ul::before {
 <div class="tree" id="familyTree"></div>
 
 <script>
-// Edit names directly here
+// Corrected family data
 const familyData = {
   "name": "Babar Ali Haolader",
   "children": [
     {
       "name": "Akkel Ali Mdridha",
       "children": [
-        {"name": "Abser Kerani",
-        "children": [
-        {"name": "Manik"},
-        {"name": "Lotif"}
-      ]
-        }, 
+        {
+          "name": "Abser Kerani",
+          "children": [
+            {"name": "Manik"},
+            {"name": "Lotif"}
+          ]
+        },
         {"name": "Child1 Mdridha"},
         {"name": "Child1 Mdridha"},
         {"name": "Child2 Mdridha"}
@@ -107,7 +108,7 @@ const familyData = {
       "name": "Akram Ali Mridha",
       "children": [
         {"name": "Mobarak Ali"},
-        {"name": "Gohur ALi"}
+        {"name": "Gohur Ali"}
       ]
     }
   ]
@@ -136,12 +137,3 @@ treeContainer.appendChild(ulRoot);
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
