--- a/index.html
+++ b/index.html
@@ -99,7 +99,12 @@ const familyData = {
             {"name": "Lotif"}
           ]
         },
-        {"name": "Child1 Mdridha"},
+        {"name": "Child1 Mdridha",
+         "children": [
+            {"name": "b"},
+            {"name": "v"}
+          ]
+        },
         {"name": "Child1 Mdridha"},
         {"name": "Child2 Mdridha"}
       ]
@@ -137,3 +142,4 @@ treeContainer.appendChild(ulRoot);
 
 </body>
 </html>
+
