--- a/index.html
+++ b/index.html
@@ -95,7 +95,12 @@ const familyData = {
         {
           "name": "Abser Kerani",
           "children": [
-            {"name": "Manik"},
+            {"name": "Manik"
+              "children": [
+            {"name": "nn"},
+            {"name": "nb"}
+          ]
+                              },
             {"name": "Lotif"}
           ]
         },
@@ -142,4 +147,5 @@ treeContainer.appendChild(ulRoot);
 
 </body>
 </html>
+
 
