--- a/index.html
+++ b/index.html
@@ -95,21 +95,11 @@ const familyData = {
         {
           "name": "Abser Kerani",
           "children": [
-            {"name": "Manik"
-              "children": [
-            {"name": "nn"},
-            {"name": "nb"}
-          ]
-                              },
+            {"name": "Manik"},
             {"name": "Lotif"}
           ]
         },
-        {"name": "Child1 Mdridha",
-         "children": [
-            {"name": "b"},
-            {"name": "v"}
-          ]
-        },
+        {"name": "Child1 Mdridha"},
         {"name": "Child1 Mdridha"},
         {"name": "Child2 Mdridha"}
       ]
@@ -147,5 +137,3 @@ treeContainer.appendChild(ulRoot);
 
 </body>
 </html>
-
-
