--- a/index.html
+++ b/index.html
@@ -94,10 +94,14 @@ const familyData = {
       "children": [
         {
           "name": "Abser Kerani",
-          "children": [
-            {"name": "Manik"},
-            {"name": "Lotif"}
-          ]
+                      "children": [
+                      {"name": "Manik",
+                                        "children": [
+                                        {"name": "Mobarak Ali"},
+                                        {"name": "Gohur Ali"}]
+                                      
+                      },
+                      {"name": "Lotif"}]                                   
         },
         {"name": "Child1 Mdridha"},
         {"name": "Child1 Mdridha"},
@@ -137,3 +141,4 @@ treeContainer.appendChild(ulRoot);
 
 </body>
 </html>
+
